--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "react": "18.2.0",
     "react-native": "0.74.5"
   },
